fix for Designation component on mobile devices

--- a/src/components/Designation/index.scss
+++ b/src/components/Designation/index.scss
@@ -6,36 +6,36 @@
   h2 {
     color: #a38a79;
     font-family: "Poppins", sans-serif;
-    font-weight: 100;
-    letter-spacing: 1px;
-    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: .4px;
+    line-height: 1;
   }
 
   .designation_name {
-    font-weight: 300;
+    font-weight: 400;
   }
 
   .designation_role {
-    font-weight: 200;
+    font-weight: 400;
   }
 
   @media screen and (min-width: 320px) {
     h1 {
-      font-size: 14px;
+      font-size: 22px;
     }
 
     h2 {
-      font-size: 12px;
+      font-size: 14px;
     }
   }
 
   @media screen and (min-width: 460px) {
     h1 {
-      font-size: 20px;
+      font-size: 24px;
     }
 
     h2 {
-      font-size: 16px;
+      font-size: 18px;
     }
   }
 
@@ -57,7 +57,7 @@
     }
 
     h2 {
-      font-size: 32px;
+      font-size: 24px;
     }
   }
 }
